welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: not found: value b
	return (if (a%5 == 0 && b% 3 == 0 ) "Fizz Buzz" else if (a%5 == 0) "Buzz" else if (a%3 == 0) "Fizz" else ""+a) 
                                ^